#code#01 #新增ai对话功能，添加知识库搜索